Add CTA element.

--- a/index.html
+++ b/index.html
@@ -486,6 +486,34 @@
 
           <p>Children who experience homelessness are more likely to repeat a grade or two. They get suspended more. Their high school graduation rates are below 20 percent. They’re more likely to have health problems, like asthma. </p>
 
+          <aside call-to-action>
+            <h4>How to get involved</h4>
+            <h3>Get involved with these organizations that help homeless families in Southern California</h3>
+            <ul>
+              <li>
+                <div title>United Way</div>
+                <p description>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Suspendisse at quam mauris.  Fusce trstique lorem ante, vitae allamcorper neque lacinia vel.
+                </p>
+                <a href="http://unitedwayla.org">www.unitedwayla.org</a>
+              </li>
+              <li>
+                <div title>United Way</div>
+                <p description>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Suspendisse at quam mauris.  Fusce trstique lorem ante, vitae allamcorper neque lacinia vel.
+                </p>
+                <a href="http://unitedwayla.org">www.unitedwayla.org</a>
+              </li>
+              <li>
+                <div title>United Way</div>
+                <p description>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Suspendisse at quam mauris.  Fusce trstique lorem ante, vitae allamcorper neque lacinia vel.
+                </p>
+                <a href="http://unitedwayla.org">www.unitedwayla.org</a>
+              </li>
+            </ul>
+          </aside>
+
           <p>“If you look at these kids long term,” she said, “they are set up for mental health and medical issues as they emerge into adulthood.”</p>
 
           <p>Los Angeles County officials and nonprofit agencies said they are making an effort to find shelter and temporary homes for families once they become homeless. But they are swimming against the tide.</p>
