Add copy revisions.

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
         </header>
         <div contents>
           <form representative id="draw-form" class="inactive">
-            <h2>Contact your state representatives about CalWORKs</h2>
-            <span description>Use this tool to look up your state senator and assemblymember.  Then email, call, or write them about how you feel about the impact of CalWORKs on Southern California families.</span>
+            <h2>How to contact your representatives</h2>
+            <span description>Use this tool to look up your state and local representatives if you'd like to email, call or write them about growing family homelessness.</span>
             <hr>
             <div lookup>
               <h3>Look Up Your Representatives</h3>
@@ -162,16 +162,14 @@
               <input class="hidden" type="text" name="lng" id="longitudeSearch">
             </div>
             <div suggestion>
-              <h3>Suggested Message</h3>
+              <h3>FACTS YOU MAY WANT TO SHARE</h3>
               <section>
-                <p>I'm concerned about growing family homelessness in California.</p>
-                <p>Public radio KPCC is reporting that:<br/>
                 <ul>
                     <li>Nearly 60,000 families called L.A. County's 2011 line for help finding emergency shelter in 2015. And women and children surpassed the number of single men seeking refuge at Los Angeles' Union Rescue Mission on Skid Row last year&mdash;the first time that's happened in its 125-year history.</li>
                     <br/>
                     <li>Since 2010, eight infants identified by Los Angles County officials as homeless died sleeping in conditions experts call unsuitable, but were the families only option.</li>
                     <br/>
-                    <li>Harvest House, in Venice, can take in about two dozen pregnant women at a time. Workers there estimate they had to turn away about 500 pregnant women last year.</li>
+                    <li>Harvest Home, in Venice, can take in about two dozen pregnant women in a year. Workers there estimate they had to turn away about 500 pregnant women last year.</li>
                     <br/>
                     <li>Orange and San Bernardino county school officials report the number of students without stable housing tripled over the past decade, to 26,064 in Orange County public schools and 35,165 in San Bernardino. Los Angeles public schools have identified 54,916 homeless students.</li>
                 </ul>
@@ -187,7 +185,7 @@
       <article>
 
         <div class="hero">
-          <h1 class="headline headline--giant headline--light">Headline for homeless story</h1>
+          <h1 class="headline headline--giant headline--light">Why more California families are becoming homeless</h1>
         </div>
 
 
@@ -227,7 +225,7 @@
 
           <p>“I had promised myself there’s things I was going to do while I was pregnant,” she said. “And after meeting my baby, I was like: I have to get us a place. You have to have your own room.”</p>
 
-          <p>Marshall was homeless. She didn’t have a job and the cash assistance she received from the state didn’t cover rent.</p>
+          <p>Marshall was homeless. She had cash assistance from the state, but that didn’t cover rent.</p>
 
           <p>They were living in a shelter in Boyle Heights, hoping one of Los Angeles’ scattered non-profits would find them a subsidized apartment. Despite the disruption, Zah'Nyah had been doing well.</p>
 
@@ -239,7 +237,7 @@
 
           <p>An autopsy would turn up no illness that could explain it. Zah'Nyah’s death was reported as Sudden Unexplained Infant Death and the medical examiner noted “co-sleeping” as a factor.
 
-          <p>The shelter didn’t have a crib, just bunk beds. Marshall said the shelter operators didn’t allow her to bring a bassinet or any other “outside” furniture. Fearing Zah'Nyah would fall and hurt herself, Marshall had dragged a mattresses onto the floor and that’s where the two slept every night.
+          <p>The shelter didn’t have a crib, just bunk beds. Marshall said the shelter operators didn’t allow her to bring a bassinet or any other “outside” furniture. Fearing Zah'Nyah would fall and hurt herself, Marshall had dragged a mattress onto the floor and that’s where the two slept every night.
 
           <p>Experts say sleeping on a regular bed can obstruct an infant’s breathing and lead to accidental death.
 
@@ -297,7 +295,7 @@
 
           <p>“If the CalWORKs benefits are inadequate to pay for housing, then they become homeless,” he said. “The equation is that simple.”</p>
 
-          <p>Rents in L.A. spiked 25 percent from 2000 to 2012. During, the same period, the CalWORKs not only failed to keep up – the grant was reduced by $7 per month.</p>
+          <p>Rents in L.A. spiked 25 percent from 2000 to 2012. During the same period, CalWORKs not only failed to keep up – the grant was reduced by $7 per month.</p>
 
           <p>The result? The number of L.A. County families enrolled in CalWORKs who couldn’t give a permanent address—code for homeless – tripled from about 5,500 in 2006 to almost 17,000 in 2015.</p>
         </section>
@@ -356,11 +354,12 @@
 
 
         <aside feedback>
-          <div description>
-            Do you know what I'm thinking, or are you thinking about what I'm thinking?
-          </div>
+          <h4>HOW TO GET INVOLVED</h4>
+          <p>
+            Tell us how you feel about CalWORKs' impact on families in Southern California
+          </p>
           <a href="https://docs.google.com/forms/d/e/1FAIpQLScxvZ6mfw39MkNij8qsTsda_01TIRVHRapHlD_KXhJl3zpPBQ/viewform">
-            Tell Us What You Think
+            SHARE YOUR THOUGHTS WITH KPCC
           </a>
         </aside>
 
@@ -399,11 +398,11 @@
 
           <p>Fortunately, it does — just enough to shuffle 100 feet every 72 hours and avoid a ticket from the parking enforcement agents who come by every day, chalking tires. </p>
 
-          <p>And that means for the past six months, it has served its purpose: a home for the family. Monteagudo hopes it’ll continue to be – though the city of Los Angeles has banned sleeping in cars and RVs on city streets. The prohibition goes into effect Jan. 7.</p>
+          <p>And that means for the past six months, it has served its purpose: a home for the family. Monteagudo hopes it’ll continue to be – though the city of Los Angeles has banned sleeping in cars and RVs on residential city streets. The prohibition goes into effect Jan. 7.</p>
 
           <p>For now, Monteagudo and Salvago sleep in the RV’s full-size bed with A.J. Aaron curls up on the kitchen bench. They cook on portable stoves and drink bottled water. They shower at a nearby 24 Hour Fitness. The monthly fee is worth it for the showers. </p>
 
-          <p>During the day, while Aaron’s at school, Salvago sometimes works as an in-home caregiver.</p>
+          <p>Salvago sometimes works as an in-home caregiver.</p>
 
           <p>&nbsp;</p>
 
@@ -427,7 +426,7 @@
 
           <p>The growing family moved into a room, sharing a two-bedroom apartment in Panorama City with another couple, friends of friends. The U.S. Department of Housing and Urban Development estimates 38 percent of L.A. County’s children live in “crowded” households like this, with more people than rooms in the house, including the kitchen.</p>
 
-          <p>Those situations are considered bad for kids. Babies and toddlers don’t have space to move. It’s loud. There’s no privacy. Developmental, speech, and emotional delays are common, according to Stacey Scarborough, with the Venice Family Clinic’s Head Start program.</p>
+          <p>Those situations are considered bad for kids. Babies and toddlers don’t have space to move. It’s loud. There’s no privacy. Developmental, speech, and emotional delays are common, according to Stacey Scarborough, with Venice Family Clinic’s Head Start program.</p>
 
           <p>These crowded houses put families on the fragile precipice of homelessness. A dead car battery, an illness, a layoff or a bad argument frequently puts entire families out on the street. KPCC heard these stories repeatedly from homeless families.</p>
 
@@ -455,7 +454,7 @@
 
         <section>
           <ul>
-            <li>Nearly 60,000 families called L.A. County’s 211 line for help finding emergency shelter in 2015, double the number from three (or two? Needs cq) years earlier. The majority of these calls involved families with children under 5.</li>
+            <li>Nearly 60,000 families placed calls to L.A. County’s 211 line for help finding emergency shelter in 2015, double the number from three years earlier. The majority of these calls involved families with children under 5 and pregnant women.</li>
 
             <li>L.A. County officials estimate 8,000 women become homeless annually in the county at some point during pregnancy. There are only 69 dedicated beds for pregnant women in L.A. County, according to The Harvest Home, in Venice, which has room for about two dozen pregnant women a year. Workers there estimate they had to turn away about 500 pregnant women last year.</li>
 
@@ -557,7 +556,7 @@
 
 
         <section>
-          <p>The nurse’s aide and cosmetologist couldn’t find a job with enough flexibility to care for her kids. So for two years, they bounced around from shelters to motels. </p>
+          <p>The nurse’s aide and hairdresser couldn’t find a job with enough flexibility to care for her kids. So for two years, they bounced around from shelters to motels. </p>
 
           <p>Relatives and even her kids’ teachers pitched in to cover motel rooms. Her $525 a month CalWORKs check simply wasn’t enough.</p>
 
@@ -653,7 +652,7 @@
         <section>
           <p>The federal government funds CalWORKs and other states’ cash welfare programs with block grants through Temporary Assistance for Needy Families. To get the money, states must partially match the contribution. California commits to spend $2.8 billion and gets $3.7 billion from the federal government each year.</p>
 
-          <p>But states don’t have to spend all the money on cash aid for the poor. They can fund any program they say is aimed at alleviating poverty and increasingly states have chosen to spend the money on all sorts of programs. Some states(one?) have gone as far as using it to pay for free marriage classes for the middle class.</p>
+          <p>But states don’t have to spend all the money on cash aid for the poor. They can fund any program they say is aimed at alleviating poverty and increasingly states have chosen to spend the money on all sorts of programs. At least one state has gone as far as using it to pay for free marriage classes for the middle class.</p>
 
           <p>The flexibility has allowed two California governors – Arnold Schwarzenegger and Jerry Brown – to repeatedly cut the maximum monthly CalWORKs payments to poor families, with the approval of the California Legislature. Schwarzenegger even proposed eliminating the cash payments at one point, but the Legislature balked.</p>
 
@@ -695,7 +694,7 @@
 
           <p>Governor Jerry Brown’s office declined a request to be interviewed for this story.</p>
 
-          <p>KPCC attempted to talk to him at a pre-election rally, where he spoke against Proposition 57, a ballot initiative that would have threatened funding for two of his legacy projects: high speed rail and Sacramento Delta water tunnels. When reporters tried to approach the governor, he was shuffled into a car and drove off.</p>
+          <p>KPCC attempted to talk to him at a pre-election rally, where he spoke against Proposition 53, a ballot initiative that would have threatened funding for two of his legacy projects: high speed rail and Sacramento Delta water tunnels. When reporters tried to approach the governor, he was shuffled into a car and drove off.</p>
         </section>
 
 
@@ -724,7 +723,7 @@
 
           <p>That will take a long time.</p>
 
-          <p>Economists with California Housing Partnership estimate Los Angeles County needs about 550,000 new affordable housing units—meaning a place you can afford if you earn less than the median income. </p>
+          <p>Economists with California Housing Partnership estimate Los Angeles County needs about 550,000 new affordable housing units—meaning a place you can afford if you earn less than half the median income. </p>
 
           <p>In order for housing costs in Los Angeles to drop to the national average, the state Legislative Analyst’s Office estimates the county would need to build 1 million units of new housing. At its current pace of building, it’d take the county 50 years to catch up, not accounting for the anticipated continued population growth.</p>
 
@@ -750,7 +749,7 @@
         <figure>
           <img src="http://a.scpr.org/i/0f15cdc567c8579df30e13dbd57fcd14/148462-full.jpg">
           <figcaption>
-            Maria Carrera spends time with her children during a hot summer day in their fou-bedroom apartment in Anaheim, Calif.  A rapid rehousing program paid for most of the $2,400 rent.
+            Maria Carrera spends time with her children during a hot summer day in their four-bedroom apartment in Anaheim, Calif.  A rapid rehousing program paid for most of the $2,400 rent.
             <address>Maya Sugarman / KPCC</address>
           </figcaption>
         </figure>
@@ -804,7 +803,7 @@
           <figure>
             <img src="http://a.scpr.org/i/eb52274ad53682fdef0576da36eac6f8/148464-full.jpg">
             <figcaption>
-              Former sixteen-year-old Alexandra Lazaro, left, sits on her bed in her family's four-bedroom apartment in Anaheim, Calif. on Monday, June 20, 2016.  Lazaro, who is now in her junior year of high school, says her grades suffered while her family bounced from shelter to shelter.
+              Alexandra Lazaro, 16 at the time, sits on her bed in her family’s four-bedroom apartment in Anaheim, Calif. on Monday, June 20, 2016. Lazaro, who is now in her junior year of high school, says her grades suffered while her family bounced from shelter to shelter.
               <address>Maya Sugarman / KPCC</address>
             </figcaption>
           </figure>
@@ -853,7 +852,7 @@
 
           <p>Rapid rehousing is cheaper than shelters — and much cheaper than building housing. </p>
 
-          <p>HUD said it plans to continue to invest in it. So does Los Angeles county.</p>
+          <p>HUD said it plans to continue to invest in it. So does Los Angeles County.</p>
 
           <p>Every homeless family KPCC spoke to was hoping for the permanent solution offered by the federally funded Section 8 program. It provides permanent subsidized housing vouchers for impoverished families.</p>
 
@@ -899,8 +898,8 @@
 
 
       <form representative id="page-form" class="active">
-        <h2>Contact your state representatives about CalWORKs</h2>
-        <span description>Use this tool to look up your state senator and assemblymember.  Then email, call, or write them about how you feel about the impact of CalWORKs on Southern California families.</span>
+        <h2>How to contact your representatives</h2>
+        <span description>Use this tool to look up your state and local representatives if you'd like to email, call or write them about growing family homelessness.</span>
         <hr>
         <div lookup>
           <h3>Look Up Your Representatives</h3>
@@ -923,16 +922,14 @@
           <input class="hidden" type="text" name="lng" id="longitudeSearch">
         </div>
         <div suggestion>
-          <h3>Suggested Message</h3>
+          <h3>FACTS YOU MAY WANT TO SHARE</h3>
           <section>
-            <p>I'm concerned about growing family homelessness in California.</p>
-            <p>Public radio KPCC is reporting that:<br/>
             <ul>
                 <li>Nearly 60,000 families called L.A. County's 2011 line for help finding emergency shelter in 2015. And women and children surpassed the number of single men seeking refuge at Los Angeles' Union Rescue Mission on Skid Row last year&mdash;the first time that's happened in its 125-year history.</li>
                 <br/>
                 <li>Since 2010, eight infants identified by Los Angles County officials as homeless died sleeping in conditions experts call unsuitable, but were the families only option.</li>
                 <br/>
-                <li>Harvest House, in Venice, can take in about two dozen pregnant women at a time. Workers there estimate they had to turn away about 500 pregnant women last year.</li>
+                <li>Harvest Home, in Venice, can take in about two dozen pregnant women in a year. Workers there estimate they had to turn away about 500 pregnant women last year.</li>
                 <br/>
                 <li>Orange and San Bernardino county school officials report the number of students without stable housing tripled over the past decade, to 26,064 in Orange County public schools and 35,165 in San Bernardino. Los Angeles public schools have identified 54,916 homeless students.</li>
             </ul>
