Add production audio to the first audio aside.

--- a/index.html
+++ b/index.html
@@ -206,13 +206,13 @@
 
 
         <aside audio story-audio-1
-        data-title="Hero cops"
-        data-src="http://media.scpr.org/audio/upload/2015/11/09/OIS_hero-cops.mp3"
-        onClick="ga('send', 'event', 'ois', 'audioPlay', 'Deadly force');">
+        data-title="Broke Special"
+        data-src="https://s3-us-west-1.amazonaws.com/scpr-projects/broke/BROKE+SPECIAL.mp3"
+        onClick="ga('send', 'event', 'ois', 'audioPlay', 'Broke Special');">
           <button play></button>
           <div details>
-            <span title>Listen to the story: Hero cops</span>
-            <span duration>4 min 36 sec</span>
+            <span title>Broke Special</span>
+            <span duration>24 min 22 sec</span>
           </div>
         </aside>
 
