Add placeholder for second piece of audio.

--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
 
 
         <div share-story>
-          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
+          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareFacebook', 'Feature - I See Heroes');">
             <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
           </a>
-          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
+          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareTwitter', 'Feature - I See Heroes');">
             <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
           </a>
         </div>
@@ -208,7 +208,7 @@
         <aside audio story-audio-1
         data-title="Broke Special"
         data-src="https://s3-us-west-1.amazonaws.com/scpr-projects/broke/BROKE+SPECIAL.mp3"
-        onClick="ga('send', 'event', 'ois', 'audioPlay', 'Broke Special');">
+        onClick="ga('send', 'event', 'hsp', 'audioPlay', 'Broke Special');">
           <button play></button>
           <div details>
             <span title>Broke Special</span>
@@ -251,10 +251,10 @@
 
 
         <div share>
-          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
+          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareFacebook', 'Feature - I See Heroes');">
             <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
           </a>
-          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
+          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareTwitter', 'Feature - I See Heroes');">
             <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
           </a>
         </div>
@@ -529,10 +529,10 @@
 
 
         <div share>
-          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
+          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareFacebook', 'Feature - I See Heroes');">
             <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
           </a>
-          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
+          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareTwitter', 'Feature - I See Heroes');">
             <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
           </a>
         </div>
@@ -634,16 +634,28 @@
 
 
         <div share>
-          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
+          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareFacebook', 'Feature - I See Heroes');">
             <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
           </a>
-          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
+          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareTwitter', 'Feature - I See Heroes');">
             <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
           </a>
         </div>
 
 
         <hr fancy>
+
+
+        <aside audio story-audio-2
+        data-title="Cupid Carries a Gun"
+        data-src="https://s3-us-west-1.amazonaws.com/scpr-projects/broke/cupid-carries-a-gun.mp3"
+        onClick="ga('send', 'event', 'hsp', 'audioPlay', 'Cupid Carries a Gun');">
+          <button play></button>
+          <div details>
+            <span title>Cupid Carries a Gun</span>
+            <span duration>24 min 22 sec</span>
+          </div>
+        </aside>
 
 
         <h2>States have a lot of flexibility on how much to spend on helping poor families.</h2>
@@ -668,10 +680,10 @@
 
 
         <div share>
-          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
+          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareFacebook', 'Feature - I See Heroes');">
             <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
           </a>
-          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
+          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareTwitter', 'Feature - I See Heroes');">
             <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
           </a>
         </div>
@@ -704,10 +716,10 @@
 
 
         <div share>
-          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
+          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareFacebook', 'Feature - I See Heroes');">
             <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
           </a>
-          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
+          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareTwitter', 'Feature - I See Heroes');">
             <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
           </a>
         </div>
@@ -789,10 +801,10 @@
 
 
         <div share>
-          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
+          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareFacebook', 'Feature - I See Heroes');">
             <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
           </a>
-          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
+          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareTwitter', 'Feature - I See Heroes');">
             <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
           </a>
         </div>
@@ -832,10 +844,10 @@
 
 
         <div share>
-          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
+          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareFacebook', 'Feature - I See Heroes');">
             <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
           </a>
-          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
+          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareTwitter', 'Feature - I See Heroes');">
             <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
           </a>
         </div>
@@ -882,10 +894,10 @@
 
         <section>
           <div share-story>
-            <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
+            <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareFacebook', 'Feature - I See Heroes');">
               <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
             </a>
-            <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
+            <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'hsp', 'shareTwitter', 'Feature - I See Heroes');">
               <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
             </a>
           </div>
