Change behavior of header and the hero image & heading.

--- a/index.html
+++ b/index.html
@@ -38,22 +38,6 @@
 
     <main>
 
-      <header top>
-        <div branding>
-          <a logo href="http://www.scpr.org/"><img src="./images/logo_kpcc-white.svg" alt="89.3 KPCC"></a>
-          <span pipe></span>
-          <h3>Broke</h3>
-          <span tagline>: Why more california families are becoming homeless</span>
-          <label for="nav-drawer-toggler-checkbox">
-            Broke
-          </label>
-        </div>
-        <label open for="nav-drawer-toggler-checkbox">
-          <img src="./images/icon_plus.svg">
-          <span>Political Engagement Tool</span>
-        </label>
-      </header>
-
 
       <div id="jquery_jplayer_1" class="jp-jplayer"></div>
 
@@ -173,9 +157,8 @@
                     <br/>
                     <li>Orange and San Bernardino county school officials report the number of students without stable housing tripled over the past decade, to 26,064 in Orange County public schools and 35,165 in San Bernardino. Los Angeles public schools have identified 54,916 homeless students.</li>
                 </ul>
-                <p>What are you doing to reduce the number of children and families in my community who become homeless?</p>
+  
               </section>
-              <button copy type="button" data-clipboard-target="div[suggestion]">Copy this text</button>
             </div>
           </form>
         </div>
@@ -185,7 +168,7 @@
       <article>
 
         <div class="hero">
-          <h1 class="headline headline--giant headline--light">Why more California families are becoming homeless</h1>
+          <h1 class="headline headline--giant headline--light"><span text-break id='headline-sm-breakpoint'>Why more</span> <span text-break>California families are</span> <span text-break>becoming homeless</span></h1>
         </div>
 
 
@@ -945,9 +928,7 @@
                 <br/>
                 <li>Orange and San Bernardino county school officials report the number of students without stable housing tripled over the past decade, to 26,064 in Orange County public schools and 35,165 in San Bernardino. Los Angeles public schools have identified 54,916 homeless students.</li>
             </ul>
-            <p>What are you doing to reduce the number of children and families in my community who become homeless?</p>
           </section>
-          <button copy type="button" data-clipboard-target="div[suggestion]">Copy this text</button>
         </div>
       </form>
 
