Add reach-out call-to-action.

--- a/index.html
+++ b/index.html
@@ -624,6 +624,17 @@
 
           <p>The flexibility has allowed two California governors – Arnold Schwarzenegger and Jerry Brown – to repeatedly cut the maximum monthly CalWORKs payments to poor families, with the approval of the California Legislature. Schwarzenegger even proposed eliminating the cash payments at one point, but the Legislature balked.</p>
 
+          <aside call-to-action>
+            <h4>HOW TO GET INVOLVED</h4>
+            <h3>Contact your state representatives about this issue</h3>
+            <p>
+              Check out our tool at the end of this story to help you get in touch with your senator and assemblymember.
+            </p>
+            <label for="nav-drawer-toggler-checkbox">
+              Reach out to my representatives
+            </label>
+          </aside>
+
           <p>Between 2008 and 2013, the state dropped CalWORKs grants by 12 percent. At first, the reason was the recession. The state was cutting all sorts of programs to make ends meet.</p>
 
           <p>But even as the budget has improved, Brown’s administration has made few increases to poor families’ CalWORKs grants. The maximum still hasn’t reached 2006 levels.</p>
