Fix some meta information in markup.

--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <meta name="description" content="Most officers will go their entire career without shooting at anyone. Among the shootings that took place during the five years KPCC reviewed, many involved life-saving acts of bravery." />
     <meta property="og:site_name" content="KPCC" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Officer Involved: ‘I see heroes’" />
-    <meta property="og:url" content="http://projects.scpr.org/officer-involved/stories/i-see-heroes/" />
+    <meta property="og:title" content="Broke: Why more California families are becoming homeless" />
+    <meta property="og:url" content="http://projects.scpr.org/broke/" />
     <meta property="og:description" content="Most officers will go their entire career without shooting at anyone. Among the shootings that took place during the five years KPCC reviewed, many involved life-saving acts of bravery." />
-    <meta property="og:image" content="http://a.scpr.org/i/2e2d8958b2fd7a8ff7d00b543ab8742c/114114-full.jpg" />
+    <meta property="og:image" content="http://a.scpr.org/i/b10ec0efebe4392a9bcbd2e99a70f0c3/148452-full.jpg" />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="683" />
     <meta property="og:locale" content="en_US" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@KPCC" />
     <meta name="twitter:creator" content="@KPCC" />
-    <meta name="twitter:title" content="Officer Involved: ‘I see heroes’">
-    <meta name="twitter:url" content="http://projects.scpr.org/officer-involved/stories/i-see-heroes/" />
-    <meta name="twitter:image" content="http://a.scpr.org/i/2e2d8958b2fd7a8ff7d00b543ab8742c/114114-full.jpg" />
+    <meta name="twitter:title" content="Broke: Why more California families are becoming homeless">
+    <meta name="twitter:url" content="http://projects.scpr.org/broke/" />
+    <meta name="twitter:image" content="http://a.scpr.org/i/b10ec0efebe4392a9bcbd2e99a70f0c3/148452-full.jpg" />
     <meta name="twitter:description" content="Most officers will go their entire career without shooting at anyone. Among the shootings that took place during the five years KPCC reviewed, many involved life-saving acts of bravery." />
     <link rel="shortcut icon" href="../../favicon.ico">
 
@@ -47,7 +47,7 @@
           <a logo href="http://www.scpr.org/"><img src="./images/logo_kpcc-black.svg" alt="89.3 KPCC"></a>
           <span pipe></span>
           <h3>Broke</h3>
-          <span tagline>: Why more california families are becoming homeless</span>
+          <span tagline>: Why more California families are becoming homeless</span>
           <label for="nav-drawer-toggler-checkbox">
             Broke
           </label>
@@ -110,7 +110,7 @@
             <a logo href="http://www.scpr.org/"><img src="./images/logo_kpcc-black.svg" alt="89.3 KPCC"></a>
             <span pipe></span>
             <h3>Broke</h3>
-            <span tagline>: Why more california families are becoming homeless</span>
+            <span tagline>: Why more California families are becoming homeless</span>
             <label for="nav-drawer-toggler-checkbox">
               Broke
             </label>
@@ -231,7 +231,6 @@
         <blockquote>
           <p>I remember we were just about to go and they were like: ‘it’s too late.’  And I broke.  You know.  I broke.</p>
         </blockquote>
-
 
 
         <section>
@@ -598,7 +597,6 @@
         </blockquote>
 
 
-
         <hr fancy>
 
 
@@ -646,7 +644,6 @@
         </blockquote>
 
 
-
         <section>
           <p>Frank Mecca, head of the County Welfare Directors Association of California said it’s been clear to him for years that family homelessness is rising as a direct result of the state legislature and the governor systematically de-funding cash welfare for families in California. </p>
 
@@ -671,7 +668,6 @@
         <blockquote>
           <p>(The Brown administration has to decide if) leading a state with the highest child poverty rate in the nation is what they wish to have as a part of their legacy.  If I were him, I would not.</p>
         </blockquote>
-
 
 
         <section>
@@ -749,7 +745,6 @@
         </blockquote>
 
 
-
         <section>
 
           <figure>
@@ -781,7 +776,6 @@
         <blockquote>
           <p>We've seen families bounce from four to five programs.  The truth is they require a longer level of support.</p>
         </blockquote>
-
 
 
         <section>
