--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="twitter:description" content="Most officers will go their entire career without shooting at anyone. Among the shootings that took place during the five years KPCC reviewed, many involved life-saving acts of bravery." />
     <link rel="shortcut icon" href="../../favicon.ico">
 
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="index.css">
 
     <!-- Load web fonts -->
     <script src="https://use.typekit.net/cka2qre.js"></script>
