--- a/index.html
+++ b/index.html
@@ -601,13 +601,13 @@
 
 
         <aside audio story-audio-2
-        data-title="Cupid Carries a Gun"
-        data-src="https://s3-us-west-1.amazonaws.com/scpr-projects/broke/cupid-carries-a-gun.mp3"
-        onClick="ga('send', 'event', 'hsp', 'audioPlay', 'Cupid Carries a Gun');">
+        data-title="Get Down (Feat. Peaches)"
+        data-src="https://s3-us-west-1.amazonaws.com/scpr-projects/broke/Get+Down+(Feat.+Peaches).mp3"
+        onClick="ga('send', 'event', 'hsp', 'audioPlay', 'Get Down (Feat. Peaches)');">
           <button play></button>
           <div details>
-            <span title>Cupid Carries a Gun</span>
-            <span duration>24 min 22 sec</span>
+            <span title>Get Down (Feat. Peaches)</span>
+            <span duration>4 min 32 sec</span>
           </div>
         </aside>
 
